fixed misalignment in music tab

--- a/src/index.css
+++ b/src/index.css
@@ -412,7 +412,8 @@ section {
     width: 50%;
 }
 #music > div:nth-of-type(2) {
-    margin-top: 25px;
+    margin-top: 32px;
+    margin-bottom: 32px;
 }
 @media(max-width: 700px) {
     #music {
